--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<!--<meta http-equiv="Refresh" Content="10; ./welcome.html"> -->
+<meta http-equiv="Refresh" Content="10; ./welcome.html"> 
 
 
 
@@ -68,7 +68,7 @@
 
 
 
-			//È«ÆÁÏÔÊ¾
+			//å…¨å±æ˜¾ç¤º
 
 			c.height = window.innerHeight;
 
@@ -76,7 +76,7 @@
 
 
  			
-			var txts = "052¤¢7B8¤¤¸ÊGANEÊ¿CHENG³É¤¦1¤¨9¤ª¸Ê¤«¤­Ê¿¤¯¤±¤³³ÉEFCADG¸ÊHIJKÊ¿LMNO³ÉPQRSTU¸ÊVWXYZEÊ¿FCADGH³ÉIJKLM";
+			var txts = "052ã‚7B8ã„ç”˜GANEå£«CHENGæˆã†1ãˆ9ãŠç”˜ã‹ãå£«ãã‘ã“æˆEFCADGç”˜HIJKå£«LMNOæˆPQRSTUç”˜VWXYZEå£«FCADGHæˆIJKLM";
 
 			txts = txts.split("");
 
@@ -88,7 +88,7 @@
 
 
 
-			//Ã¿ÐÐÒªÊä³öÊý×é
+			//æ¯è¡Œè¦è¾“å‡ºæ•°ç»„
 
 			var drops = [];
 
@@ -100,7 +100,7 @@
 
 
 
-			//×Ö·ûËæ»úÑÕÉ«
+			//å­—ç¬¦éšæœºé¢œè‰²
 
 			var wh_color = new Array();
 
@@ -112,13 +112,13 @@
 
 
 
-			//»æ³ö×Ö·û
+			//ç»˜å‡ºå­—ç¬¦
 
 			function draw()
 
 			{
 
-				//ºÚÉ«±³¾°£¬°ëÍ¸Ã÷ÏÔÊ¾
+				//é»‘è‰²èƒŒæ™¯ï¼ŒåŠé€æ˜Žæ˜¾ç¤º
 
 				ctx.fillStyle = "rgba(0, 0, 0, 0.09)";
 
@@ -134,13 +134,13 @@
 
 
 
-				//dropsÑ­»·
+				//dropså¾ªçŽ¯
 
 				for(var i = 0; i < drops.length; i++)
 
 				{
 
-					//Ëæ»ú´òÓ¡×Ö·û
+					//éšæœºæ‰“å°å­—ç¬¦
 
 					var text = txts[Math.floor(Math.random()*txts.length)];
 
@@ -160,7 +160,7 @@
 
 
 
-					//Y×ø±êÔö¼Ó
+					//Yåæ ‡å¢žåŠ 
 
 					drops[i]++;
 
