--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<meta http-equiv="Refresh" Content="10; ./welcome.html"> 
+<meta http-equiv="Refresh" Content="10; ./welcome.md"> 
 
 
 
@@ -62,7 +62,7 @@
 
 			{
 
-				location.href="./welcome.html";
+				location.href="./welcome.md";
 
 			}, false);
 
