--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "Welcome to Mocushle's World"
+description: "Welcome to Mocushle's Blog"
 ---
 
 {% for post in paginator.posts %}
