Update and rename idefult.html to index.html

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<meta http-equiv="Refresh" Content="10; ./welcome.md"> 
+<meta http-equiv="Refresh" Content="10; ./home/"> 
 
 
 
-<title>You Are No.1</title>
+<title>Welcome to Schweiger's Blog</title>
 
 <style type="text/css">
 
@@ -62,7 +62,7 @@
 
 			{
 
-				location.href="./welcome.md";
+				location.href="./home/";
 
 			}, false);
 
@@ -75,8 +75,8 @@
 			c.width = window.innerWidth;
 
 
- 			
-			var txts = "052あ7B8い甘GANE士CHENG成う1え9お甘かき士くけこ成EFCADG甘HIJK士LMNO成PQRSTU甘VWXYZE士FCADGH成IJKLM";
+ 			var txts = "あ8い5し2て7る8リ0リ2ー 3Eu8te5amo2lírio7ti8amo,ti0vogliobene2giglio3I8love5you2Lily7널8사랑0백합23";
+			var txt1s = "052あ7B8い甘GANE士CHENG成う1え9お甘かき士くけこ成EFCADG甘HIJK士LMNO成PQRSTU甘VWXYZE士FCADGH成IJKLM";
 
 			txts = txts.split("");
 
