--- a/tags.html
+++ b/tags.html
@@ -1,8 +1,9 @@
 ---
-layout: page
+<!--layout: page
 title: "Tags"
 description: "This is a list of my articles"  
-header-img:   
+header-img:  
+-->
 ---
 
 # 本页使用方法
