--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 ---
 layout: page    
-header-img: "img/red.jpg"  
+header-img: "img/shan2.jpg"  
 description: "Sorry! Something is wrong"
 permalink: 404.html  
 ---
